force-app/src/objects/c2g__codaPeriod__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpperiod</customHelpPage>
    <description>Defines the accounting periods into which a financial year is divided.</description>
    <fields>
        <fullName>c2g__AP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Accounts Payable Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Accounts Receivable Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Cash Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__HardCloseOptions__c</fullName>
        <label>Hard Close Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All GLAs</fullName>
                </value>
                <value>
                    <fullName>AR GLAs Group</fullName>
                </value>
                <value>
                    <fullName>AP GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Cash GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Other GLAs Groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Periods</relationshipLabel>
        <relationshipName>Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodGroup__c</fullName>
        <label>Period Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PeriodNumber__c</fullName>
        <label>Period Number</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SoftCloseOptions__c</fullName>
        <label>Soft Close Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All GLAs</fullName>
                </value>
                <value>
                    <fullName>AR GLAs Group</fullName>
                </value>
                <value>
                    <fullName>AP GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Cash GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Other GLAs Groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__SoftClose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Closes the period for all document types except journals.</description>
        <inlineHelpText>When selected, this period is closed to all document types except for Journals. You cannot save Invoices, Credit Notes or Cash items to this period.</inlineHelpText>
        <label>Soft Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearName__c</fullName>
        <label>Year Name</label>
        <referenceTo>c2g__codaYear__c</referenceTo>
        <relationshipLabel>Periods</relationshipLabel>
        <relationshipName>Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Period</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__YearName__c</columns>
        <columns>c2g__PeriodNumber__c</columns>
        <columns>c2g__Description__c</columns>
        <columns>c2g__PeriodGroup__c</columns>
        <columns>c2g__StartDate__c</columns>
        <columns>c2g__EndDate__c</columns>
        <columns>c2g__Closed__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__AP__c</columns>
        <columns>c2g__AR__c</columns>
        <columns>c2g__Cash__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>2024,2025</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Period ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>